*edit* front / fixing double scrollbar on all pages

--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -21,7 +21,6 @@ html, body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   margin: 0; 
